--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -144,3 +144,15 @@ header ul li
     display:inline-block; 
  }
 
+ @media screen and (max-width:450px)
+ {
+    #circle-icon{
+        display:none; 
+    }
+    .headerul{
+        margin-left: -5px;
+    }
+    #list-with-burger{
+        width:auto; 
+    }
+ }
