--- a/src/pages/Home/interests.css
+++ b/src/pages/Home/interests.css
@@ -18,11 +18,20 @@
   margin-top: 70px;
   display: flex;
   flex-direction: row;
-  padding-left: 30px;
   justify-content: space-between;
   /* border: 1px solid black; */
 }
 
+
+@media screen and (max-width:1500px)
+{
+  #interest-card-holder-row{
+    justify-content: space-around;
+    width:1000px; 
+  }
+
+ 
+}
 @media screen and (max-width:1200px)
 {
   #interest-card-holder-row{
@@ -50,6 +59,7 @@
   margin-bottom: 40px;
   color: white;
   box-shadow: rgb(243, 241, 241) 1px 1px 1px 1px;
+ 
 }
 #interest-pill:hover{
     /* border: 1px solid black; */
@@ -82,6 +92,7 @@
   overflow: hidden;
   white-space: inherit;
   color:black; 
+  padding-right: 4px;
 }
 
 #interest-bar-design {
@@ -92,9 +103,7 @@
 
 
 
-#calulator-logo {
-  margin-left: -50px;
-}
+
 
 #skate-board {
   width: 80px;
@@ -108,6 +117,8 @@ width: 75px;
 height: 39px;
 
 }
+
+
 
 
 @media screen and (max-width:450px)
