--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,125 +1,116 @@
-#contact-page-header{
-    font-family: "Mukta", sans-serif;
+#contact-page-header {
+  font-family: "Mukta", sans-serif;
   text-transform: uppercase;
   font-weight: 550;
   font-size: 25px;
 }
 
-#contact-div{
-    padding: 36px 60px 24px;
-    border: 1px solid black; 
+#contact-div {
+  padding: 36px 60px 24px;
+  border: 1px solid black;
 }
 
-#contact-page-header-description
-{
-    margin-top: 22px;
-    font-family: "Mukta", sans-serif;
-    font-size: 13px;
+#contact-page-header-description {
+  margin-top: 22px;
+  font-family: "Mukta", sans-serif;
+  font-size: 13px;
 }
 
-#flex-container-row{
-    /* border: 1px solid black; */
-    width:80%; 
-    display:flex; 
-    flex-direction: row; 
-    justify-content: space-between;
-    margin-top: 60px;
+#flex-container-row {
+  /* border: 1px solid black; */
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 60px;
 }
 
-
-#name-and-email-entry{
-    font-size: 13px;
-    font-family: "Mukta", sans-serif;
-    width:45%; 
-    padding: 10px;
-    background-color: rgb(240 239 239);
-    border: none; 
-    /* border: rgb(233, 126, 27) 1px solid;  */
+#name-and-email-entry {
+  font-size: 13px;
+  font-family: "Mukta", sans-serif;
+  width: 45%;
+  padding: 10px;
+  background-color: rgb(240 239 239);
+  border: none;
+  /* border: rgb(233, 126, 27) 1px solid;  */
 }
 
-#name-and-email-entry:focus{
-    outline: none;
-    border: rgb(233, 126, 27) 2px solid; 
-    /* background-color: blue; */
+#name-and-email-entry:focus {
+  outline: none;
+  border: rgb(233, 126, 27) 2px solid;
+  /* background-color: blue; */
 }
 
-#container-message{
-    margin-top: 25px;
-    width: 80%;
-    display:flex; 
-    flex-direction: row;
+#container-message {
+  margin-top: 25px;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
 }
 
-#message{
-    /* border: rgb(233, 126, 27) 1px solid;  */
-    border: none;
-    width: 100%;
-    font-size: 13px;
-    font-family: "Mukta", sans-serif;
-    padding: 6px;
-    background-color: rgb(240 239 239);
-    height: 210px; 
-    outline: none;
+#message {
+  /* border: rgb(233, 126, 27) 1px solid;  */
+  border: none;
+  width: 100%;
+  font-size: 13px;
+  font-family: "Mukta", sans-serif;
+  padding: 6px;
+  background-color: rgb(240 239 239);
+  height: 210px;
+  outline: none;
 }
 
-#message:focus{
-    outline: none;
-    border: rgb(233, 126, 27) 2px solid; 
+#message:focus {
+  outline: none;
+  border: rgb(233, 126, 27) 2px solid;
 }
 
-#contact-submit-button{
-    font-size: 13px;
-   width: 90px;  
-    margin-top: 40px;
-    outline: none;
-    border: none;
-    background-color: rgb(233, 126, 27); 
-    color:white; 
-    padding: 7px;
+#contact-submit-button {
+  font-size: 13px;
+  width: 90px;
+  margin-top: 40px;
+  outline: none;
+  border: none;
+  background-color: rgb(233, 126, 27);
+  color: white;
+  padding: 7px;
 }
 
-#location-map{
-    margin-top: 20px;
-    width: 70%;
-    border:0;
+#location-map {
+  margin-top: 20px;
+  width: 70%;
+  border: 0;
 }
 
-
-
-
-
-#location-header{
-    font-weight: 550;
-    font-size: 14px;
-    margin-top: 40px;
-    font-family: "Mukta", sans-serif;
-    text-transform: uppercase;
+#location-header {
+  font-weight: 550;
+  font-size: 14px;
+  margin-top: 40px;
+  font-family: "Mukta", sans-serif;
+  text-transform: uppercase;
 }
 
-#submission-true-text
-{
-    display: flex;
-    margin-top: 50px;
-    font-family: "Mukta", sans-serif;
-    font-size: 13px;
-    background-color: rgb(240 239 239);
-    padding:8px; 
-    padding-left: 20px;
-    text-align: center; 
-    align-content: center;
-    align-items: center;
-    margin-bottom: 230px;
+#submission-true-text {
+  display: flex;
+  margin-top: 50px;
+  font-family: "Mukta", sans-serif;
+  font-size: 13px;
+  background-color: rgb(240 239 239);
+  padding: 8px;
+  padding-left: 20px;
+  text-align: center;
+  align-content: center;
+  align-items: center;
+  margin-bottom: 230px;
 }
 
-#check-mark-logo
-{
-    height:50px; 
-    margin-left: 10px;
+#check-mark-logo {
+  height: 50px;
+  margin-left: 10px;
 }
 
-#submitted-true-flex
-{
-    display:flex; 
-    align-items: baseline; 
-    align-content: center;
+#submitted-true-flex {
+  display: flex;
+  align-items: baseline;
+  align-content: center;
 }
