--- a/src/pages/Home/interests.css
+++ b/src/pages/Home/interests.css
@@ -78,7 +78,7 @@
   height: 36px;
   overflow: hidden;
   white-space: inherit;
-  color: black;
+  color: rgb(80, 80, 80);
   padding-right: 4px;
 }
 
