--- a/src/components/SideInfo/SideInfo.css
+++ b/src/components/SideInfo/SideInfo.css
@@ -20,7 +20,8 @@
   /* box-shadow: 2px 1px 2px rgba(0, 0, 0, 0.1); */
   border-radius: 100px;
   height: 70px;
-  width: 70px;
+  width: 73px;
+  border: 1px solid rgb(233, 126, 27);
 }
 #pfpdiv {
   position: relative;
