--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -6,6 +6,7 @@
   width: 100%; 
   padding: 36px 60px 24px;
   cursor: context-menu;
+  padding-bottom: 200px;
 }
 
 #header-bottom-border {
@@ -149,6 +150,12 @@
   height: 55px;
   margin-top: 12px;
   margin-left: 15px;
+}
+
+#hire-logo{
+  width:200px;
+  height:50px;
+  margin-top: 20px;
 }
 
 #dozr-logo {
